--- a/ReadAssign1213/report/report.tex
+++ b/ReadAssign1213/report/report.tex
@@ -75,10 +75,10 @@ The specifications of the MacBook Pro are displayed on \autoref{tab:mbp}. \\
 			\hline \\
 			\textbf{RAM} \\
 			Type: & VER ISTO !!!!!!!!! & \\
-			Frequency: & VER ISTO !!!!!!!!! & \\
-			Size: & VER ISTO !!!!!!!!! & \\
+			Frequency: & 1067 MHz & \\
+			Size: & 4 GB & \\
 			Num. Channels: & 2 & \\
-			Latency: & VER ISTO !!!!!!!!!!! & \\
+			Latency: & 13.13 ns & \\
 		\end{tabular}
 		\caption{MacBook Pro late 2008 specifications}
 		\label{tab:mbp}
@@ -120,7 +120,7 @@ The specifications of the HP dv6-2190ep are displayed on \autoref{tab:hp}. \\
 			Frequency: & 1333 MHz & \\
 			Size: & 4GB & \\
 			Num. Channels: & 2 & \\
-			Latency: & VER ISTO !!!!!!!! & \\
+			Latency: & 13.5 ns & \\
 		\end{tabular}
 		\caption{HP Pavillion dv6-2190ep specifications}
 		\label{tab:hp}
