--- a/ReadAssign1213/report/report.tex
+++ b/ReadAssign1213/report/report.tex
@@ -218,17 +218,9 @@ The four tests, presented below, were chosen to run in the two different version
 	}
 \end{table}
 \subsection{Results}
-\begin{figure}[!htp]
-	\centering%
-	\begin{minipage}[t]{0.5\linewidth}
-		\epsfig{file=images/caches.eps}
-		\caption{dsa \label{fig:cachel1}}
-	\end{minipage}
-\end{figure
-}
 \subsubsection{Analysis Chache}
 \begin{figure}[!htp]
-	\centering%
+	\centering
 	\begin{minipage}[t]{0.5\linewidth}
 		\includegraphics[width=\textwidth]{images/caches.eps}
 		\caption{dsa \label{fig:cachel1}}
