--- a/ReadAssign1213/report/presentation.tex
+++ b/ReadAssign1213/report/presentation.tex
@@ -254,57 +254,26 @@ for (i = 0; i < size; i++) {
 \section{Results}
 \subsection{Memory Accesses}
 
-\begin{frame}[fragile]
-	\frametitle{Memory Accesses: Estimated Value}
-
-	Code structure (based on Assembly analysis):
-	\\
-	\begin{center}
-		\begin{lstlisting}
-			for(1 to N) {
-			   [4 stores, 1 load, 7 instr.]
-			   for(1 to N) {
-			      [6 stores, 3 loads, 34 instr.]
-			   }
-			   [3 stores, 6 loads, 26 instr.]
-			}
-			for(1 to N) {
-			   [3 stores, 3 loads, 10 instr.]
-			}
-		\end{lstlisting}
-	\end{center}
-\end{frame}
-
-\begin{frame}
-	\frametitle{Memory Accesses: Formula}
-
-	Based on the previous code structure, the number of memory accesses can be estimated with:
-	$$9N^{2} + 20N$$
-	where N is the number of objects being processed.
-	\\
-	The total estimated number of instruction is given by:
-	$$34N^{2} + 43N$$
-\end{frame}
 
 \begin{frame}
 	\frametitle{Memory Accesses}
 
-	The following table shows the number of memory accesses, by PAPI readings and by estimation from the previous formula
+	The following table shows the number of memory accesses, through PAPI readings.
 
 	\begin{table}[!htp]
 		\begin{center}
 		{\small
-			\begin{tabular}{|l|r|r|c|c|}
+			\begin{tabular}{|l|r|c|}
 
 				\hline
-				Test	&	PAPI					&	Estimated					&	Est. Error			&	 Accesses/Inst		\\
+				Test	&	PAPI	&	 Accesses/Inst		\\
 				\hline
-				L1\_1	&	38716					&	38144						&	1.50\%				&	0.27						\\
-				L1\_2	&	150588					&	150016						&	0.38\%				&	0.27						\\
-				L2\_1	&	604144268				&	604143616					&	0.00\%				&	0.26						\\
-				L2\_2	&	2416247656				&	2416246784					&	0.00\%				&	0.26						\\
-				RAM\_1	&	38656024690				&	38656016384					&	0.00\%				&	0.26						\\
-				RAM\_2	&	154621476174			&	154621444096				&	0.00\%				&	0.26						\\
+				L1\_1	&	380844 & 0.49033 \\
+				L1\_2	&	258412 & 0.33270 \\
+				L2\_1	&	9411279	& 0.42860\\
+				L2\_2	&	6318058	& 0.33449\\
+				L3\_1   &	7761996 & 0.00885\\
+				L3\_2   &   152192 & 0.00020\\
 				\hline
 			\end{tabular}
 		}
@@ -312,134 +281,13 @@ for (i = 0; i < size; i++) {
 	\end{table}
 \end{frame}
 
-\subsection{Mul/Add balance}
-\begin{frame}
-	\frametitle{Mult/Add balance}
-
-	There is no counter for Add operations, so it was estimated with
-	$$PAPI\_FP\_INS - PAPI\_FML\_INS - PAPI\_FDV\_IN$$
-
-	\begin{table}[!htp]
-		\begin{center}
-		{\small
-			\begin{tabular}{|l|r|r|c|c|}
-
-				\hline
-				Test	&	FP Mul Inst		&	FP Add Inst		&	Mul/Add balance	\\
-				\hline
-				L1\_1	&	33555			&	30395			&	90.58\%			\\
-				L1\_2	&	133168			&	117874			&	88.52\%			\\
-				L2\_1	&	537008683		&	469949801		&	87.51\%			\\
-				L2\_2	&	2147782971		&	1879409199		&	87.50\%			\\
-				RAM\_1	&	34360620752		&	30066293472		&	87.50\%			\\
-				RAM\_2	&	137440660580	&	120261583165	&	87.50\%			\\
-				\hline
-			\end{tabular}
-		}
-		\end{center}
-	\end{table}
-\end{frame}
-
-\subsection{CPI}
-\begin{frame}
-	\frametitle{CPI}
-
-	Calculated based on FPI\_TOT\_INS and FPI\_TOT\_CYC
-
-	\begin{table}[!htp]
-		\begin{center}
-		{\small
-			\begin{tabular}{|l|r|r|c|c|}
-
-				\hline
-				Test	&	Instructions	&	Cycles			&	CPI		&	IPC		\\
-				\hline
-				L1\_1	&	143317			&	135750			&	0.95	&	1.06	\\
-				L1\_2	&	563861			&	472027			&	0.84	&	1.19	\\
-				L2\_1	&	2282055015		&	1686732377		&	0.74	&	1.35	\\
-				L2\_2	&	9127511619		&	6775496328		&	0.74	&	1.35	\\
-				RAM\_1	&	146031715237	&	171062387955	&	1.17	&	0.85	\\
-				RAM\_2	&	584121221418	&	687083107943	&	1.18	&	0.85	\\
-				\hline
-			\end{tabular}
-		}
-		\end{center}
-	\end{table}
-\end{frame}
-
-\subsection{Miss rates}
-\begin{frame}
-	\frametitle{Miss rates}% %miss / case size
-
-	Based on the counters that give total accesses and misses to both L1 and L2 cache levels
-
-	\begin{table}[!htp]
-		\begin{center}
-		{\small
-			\begin{tabular}{|l|r|r|c|c|}
-
-				\hline
-				Test	&	L1 Accesses		&	L1 Miss \%	&	L2 Accesses		&	L2 Miss \%	\\
-				\hline
-				L1\_1	&	50287			&	0.20\%		&	290				&	33.79\%		\\
-				L1\_2	&	194416			&	0.10\%		&	476				&	34.03\%		\\
-				L2\_1	&	750943668		&	11.18\%		&	219910694		&	0.01\%		\\
-				L2\_2	&	3007631681		&	11.18\%		&	882123490		&	0.01\%		\\
-				RAM\_1	&	48304577585		&	11.14\%		&	10917610760		&	46.85\%		\\
-				RAM\_2	&	194497858380	&	11.06\%		&	42817380648		&	50.25\%		\\
-				\hline
-			\end{tabular}
-		}
-		\end{center}
-	\end{table}
-\end{frame}
-
-\subsection{Operational Intensity}
-\begin{frame}
-	\frametitle{Operational Intensity}
-
-	Attempted to estimate Bytes read from RAM with L2\_MISSES * 64, assuming that every miss will issue a new cache line read from RAM (64 Bytes)
-	However:
-	\begin{itemize}
-		\item L2 counters are derived (maybe not reliable?)
-		\item \#L1 misses <> \#L2 accesses. So we can also assume that \#L2 misses <> \#RAM accesses, making the previous formula wrong
-	\end{itemize}
-
-	\begin{table}[!htp]
-		\begin{center}
-		{\small
-			\begin{tabular}{|l|r|r|r|r|}
-				\hline
-				Test	&	L2 Misses		&	Bytes from RAM		&	FP Inst.		&	Op. Intensity	\\
-				\hline
-				L1\_1	&	98				&	6272				&	68110			&	10.86			\\
-				L1\_2	&	162				&	10368				&	267551			&	25.81			\\
-				L2\_1	&	11434			&	731776				&	1074075321		&	1,467.77		\\
-				L2\_2	&	103001			&	6592064				&	4295643580		&	651.64			\\
-				RAM\_1	&	5114423222		&	0.3e+11 (0.3 TB)	&	68721939721		&	0.21			\\
-				RAM\_2	&	21517065599		&	1.3e+12 (1.3 TB)	&	274882221251	&	0.20			\\
-				\hline
-			\end{tabular}
-		}
-		\end{center}
-	\end{table}
-
-	Actually, 1.3 TB is near the calculated value that should be read from RAM if there was no cache in between.\\
-	$$N^{2} \times 80 Bytes = 131072^{2} \times 80 Bytes = 1.25 TB$$
-
-	So given the 50\% Miss Rate from L2 Cache, it was expected that the number of Bytes read from RAM was around half, or 0.65 TB, which is not the case.\\
-
-		For L2 Tests, the very high Operational Intensity is due to an increase of the data set (L2\_1 is 64 times bigger than L1\_2) but still with enough size to fit in L2 cache, which lowers the number of reads from RAM.
-
-\end{frame}
 
 \section{Conclusion}
 \begin{frame}
 	\frametitle{Conclusion}
 	\begin{itemize}
-		\item Some difficulties measuring memory ceilings. The Roofline paper used a custom Stream benchmark, and provided no theorethical way to estimate those values;
-		\item PAPI counters may sometimes differ from what is expected, especially when measuring memory traffic;
-		\item TLP was not explored, and it would certainly prove beneficial and easili implemented for this particular algorithm;
+		\item Some difficulties measuring memory ceilings;
+		\item Lack of analysis of output from PAPI;
 	\end{itemize}
 \end{frame}
 
