--- a/ReadAssign1213/report/report.tex
+++ b/ReadAssign1213/report/report.tex
@@ -1,5 +1,5 @@
-\documentclass[a4paper,10pt,openright,openbib]{article}
-\usepackage[portuges]{babel}
+\documentclass[a4paper,10pt,openright,openbib,twocolumn]{article}
+%\usepackage[portuges]{babel}
 \usepackage[T1]{fontenc}
 \usepackage{ae}
 \usepackage[utf8]{inputenc}
@@ -16,6 +16,9 @@
 \usepackage{cleveref}
 \usepackage{epsfig}
 
+\usepackage{multicol}
+\usepackage{appendix}
+
 
 
 \setlength{\parindent}{0cm}
@@ -24,15 +27,38 @@
 
 \begin{document}
 
+\begin{multicols}{2}
+\title{Roofline and Matrix Multiplication PAPI Analysis}
+\author{
+    Brito Rui\\
+    Department of Informatics\\
+    University of Minho\\
+    ruibrito666@gmail.com
+  \and
+    Alves José\\
+    Department of Informatics\\
+    University of Minho\\
+    zealves.080@gmail.com
+}
+\date{}
+\maketitle
+\end{multicols}
+
+\begin{abstract}
+	
+	This paper focuses on the comparative analysis, based on the Roofline model\cite{roofline}, of two computers and on matrix dot product algorithm performance improvements.
+
+\end{abstract}
+
 %% Roofline%%
 \section{Roofline}
-\subsection{Machines Profile}
-The machines used for this study were a MacBook Pro late 2008 and a HP dv6-2190ep from 2010.
-The information about the machines were gathered from \emph{/proc/cpuinfo}, \emph{/proc/meminfo}, the \emph{Intel Ark} and \emph{Crucial} websites, with \emph{dmidecode} and \emph{sysctl} linux tools and with \emph{bandwidth} package.
+\subsection{Machine Profiles}
+The machines used for this study were an Apple MacBook Pro late 2008 and a 2010 HP dv6-2190ep.
+Information about the machines was gathered from various *NIX tools (e.g \emph{/proc/cpuinfo}, \emph{/proc/meminfo}, \emph{dmidecode} and \emph{sysctl}) and from the web (e.g. \emph{Intel Ark} and \emph{Crucial}). To calculate cache and main memory bandwidth we used the tool \emph{bandwidth} \footnote{http://zsmith.co/bandwidth.html}.
 
-\subsubsection{Peaks}
+\subsubsection{Performance Peaks}
 In order to calculate the rooflines, we needed the Floating-Point(FP) Performance Peak and the Memory Bandwidth's Peak. 
-To attain the FP Performance Peak we calculate the following formula:
+To attain the FP Performance Peak we solve the following formula:
 
 $$\mathrm{GFlop/s_{max}} =  \#_{\mathrm{cores}} \times f_{\mathrm{clock}} \times \#_{\mathrm{SIMD}}$$
 
@@ -44,7 +70,7 @@ $$\mathrm{GFlop/s_{max}} =  4 \times 1.6 \times 8
 						 =  51.2 GFLOPS\\s$$
 \\
 \\
-To calculate de Memory Bandwidth Peak we resolve the following formula:
+To calculate de Memory Bandwidth Peak we solve the following formula:
 
 $$\mathrm{BW_{max}} =  \#_{\mathrm{channels}} \times mem_{\mathrm{clock}} \times bus_{\mathrm{bandwidth}}$$
  
@@ -56,9 +82,11 @@ $$\mathrm{GFlop/s_{max}} =  2 \times 1333 \times 64
 						 =  21.328 GB\\byte$$
 
 \subsubsection{Specifications}
-The specifications of the MacBook Pro are displayed on \autoref{tab:mbp}. \\
+The specifications for the MacBook Pro are displayed on \autoref{tab:mbp}. \\
 
+\tabcolsep=0.11cm
 \begin{table}[!htp]
+	\footnotesize
 		\begin{tabular}{lrl}
 			\hline 
 			\textbf{Manufacter:} & Apple \\
@@ -95,8 +123,9 @@ The specifications of the MacBook Pro are displayed on \autoref{tab:mbp}. \\
 		\caption{MacBook Pro late 2008 specifications}
 		\label{tab:mbp}
 \end{table}
-The specifications of the HP dv6-2190ep are displayed on \autoref{tab:hp}. \\
+The specifications for the HP dv6-2190ep are displayed on \autoref{tab:hp}. \\
 \begin{table}[!htp]
+	\footnotesize
 		\begin{tabular}{lrl}
 			\hline 
 			\textbf{Manufacter:} & HP \\
@@ -144,7 +173,7 @@ The specifications of the HP dv6-2190ep are displayed on \autoref{tab:hp}. \\
 \subsubsection{MacBook Pro Roofline}
 \begin{figure}[!htp]
 	\centering
-	\begin{minipage}[t]{0.5\linewidth}
+	\begin{minipage}[t]{\columnwidth}
 		\includegraphics[width=\textwidth]{images/roofline_mbp.eps}
 		\caption{Mackbook Pro late 2008 \label{fig:roofline1}}
 	\end{minipage}
@@ -152,7 +181,7 @@ The specifications of the HP dv6-2190ep are displayed on \autoref{tab:hp}. \\
 \subsubsection{HP Pavillion Roofline}
 \begin{figure}[!htp]
 	\centering
-	\begin{minipage}[t]{0.5\linewidth}
+	\begin{minipage}[t]{\columnwidth}
 		\includegraphics[width=\textwidth]{images/roofline_hp.eps}
 		\caption{HP Pavillion dv6-2190ep Roofline \label{fig:roofline2}}
 	\end{minipage}
@@ -160,17 +189,17 @@ The specifications of the HP dv6-2190ep are displayed on \autoref{tab:hp}. \\
 
 \section{PAPI Case Study}
 \subsection{Problem}
-The case study of this report, is to analyse the performance of a \textbf{matrix multiplication} algorithm, \begin{equation}Matrix A * Matrix B = Matrix C\end{equation} wich contains a triple nested loop with the indexes i,j and k(line,column and position). Our implementation will explore the index order \textbf{i,j,k} of the triple nested loop.
+The case study of this report, is to analyse the performance of a \textbf{matrix dot product} algorithm, \begin{equation}Matrix A * Matrix B = Matrix C\end{equation} wich contains a triple nested loop with the indexes i,j and k(line,column and position). A naive implementation of this algorithm will provide, at best, very weak performance, since for every iteration of the j loop the whole current line of the matrix will be brought to cache (if it fits), however, since the j loop sweeps columns, this proves to be very inefficient. Our aim was to minimize this inefficiency.
 
 \subsection{Algorithm Analysis}
-The implementation produced to calculate the matrix multiplication was made in C and compiled with Optimization level 1 (-o).
-The algorithm of matrix multiplication is presented here, in order to better understand the problem at hand.
-
+The implementation produced to calculate the matrix multiplication was coded in C and compiled with Optimization level 3 (-O3, so the compiler can explore SIMD extensions).
+The naive algorithm of matrix multiplication is presented here, in order to better understand the problem at hand.
+\small
 \begin{verbatim}
 for (i = 0; i < size; i++) {
     for (j = 0; j < size; j++) {
         for(k = 0; k < size; k++) {
-            acc += matrixA[i][k] * matrixB[k][j];				
+                acc += matrixA[i][k] * matrixB[k][j];				
             }		
             matrixC[i][j] = acc;	
             acc = 0;
@@ -178,10 +207,26 @@ for (i = 0; i < size; i++) {
     }
 \end{verbatim}
 
-Two versions of the program were run, one with the matrixB and other with the transpose matrixB. With this second version, it is expected that the positions used in the algorithm will be contiguous, reducing the number of accesses to memory. 
+And, for completeness' sake, here's the optimized version. Note that the matrix \emph{tMatrix} is transposed so we can take advantage of a unit stride. 
+\small
+\begin{verbatim}
+    for (i = 0; i < size; i++) {
+        for (j = 0; j < size; j++) {
+            for(k = 0; k < size; k++) {
+                acc += matrixA[i][k] * 
+                           tMatrix[j][k];				
+            }		
+            matrixC[i][j] = acc;	
+            acc = 0;
+        }
+    }		
+\end{verbatim}
 
-\subsection{Counters Used}
-To measure the algorithm's perfomance, hardware counters were used. To gather the information of these counters we used \emph{PAPI}(Performance API). This tool alowed us to measure the following counters:
+Two versions of the program were run, one with the original matrixB and other where matrixB is transposed. With this second version, it is expected for the algorithm to access a continous memory space, thus leveraging unit stride, increasing overall performance while reducing memory accesses (due to the reduced miss rate).
+
+\subsection{Tests}
+\subsubsection{Methodology}
+To measure the algorithm's perfomance, hardware counters were used. To gather information from these counters we used \emph{PAPI}(Performance API). This tool alowed us to measure (among others) the following counters:
 \begin{description}
 \item[PAPI \_TOT\_CYC] Total number of cycles;
 \item[PAPI \_TOT\_INS] Instructions completed;
@@ -196,8 +241,12 @@ To measure the algorithm's perfomance, hardware counters were used. To gather th
 \item[PAPI \_L3\_DCA] L3 data cache accesses;
 \end{description}
 
-\subsection{Tests}
-The four tests, presented below, were chosen to run in the two different version(normal and transpose). Each test was run four times, with the best execution time being select as long as the range was no larger than the other three. Each test fits in a different memory level(L1, L2, L3 and RAM).   
+Moreover, all tests were run on a dedicated execution of the algorithm with process niceness set to -20 (\emph{nice -n -20}) to ensure that essential machine time wasn't being spent on some other task. Also, to minimize overhead, OS Widgets and network were disabled. To decrease the chance of human error, the execution of all tests was "commanded" by a bash script. This script was also responsible for checking the 5\% error margin, and, in case it wasn't satisfied, re-running the tests.
+
+
+\subsubsection{Test Cases}
+
+All four tests, presented below, were chosen to run in the two different version(normal and transpose). Each test was run four times, with the best execution time being selected within a margin of 5\%.
 \begin{table}[!htp]
 	\center{
 	\begin{tabular}{lrlrlrl}
@@ -217,11 +266,11 @@ The four tests, presented below, were chosen to run in the two different version
 \subsection{Results}
 \subsubsection{Analysis Chache}
 
- To measure the data cache misses the counters PAPI\_L1\_DCM and PAPI\_L2\_DCM were used.
+ To measure the data cache misses the counters PAPI\_L1\_DCM and PAPI\_L2\_DCM were used. Each test fits in a different memory hierarchy level(L1, L2, L3 and RAM). (Note that test suffixed with a 0 mean unoptimized version, while those suffixed with a 1 mean, optimized version).
 
 \begin{figure}[!htp]
 	\centering
-	\begin{minipage}[t]{0.5\linewidth}
+	\begin{minipage}[t]{\columnwidth}
 		\includegraphics[width=\textwidth]{images/caches.eps}
 		\caption{Percentage of Cache Misses \label{fig:cachel1}}
 	\end{minipage}
@@ -231,7 +280,7 @@ The above graphic shows an increase of percentage of misses with the optimized v
 
 \begin{figure}[!htp]
 	\centering
-	\begin{minipage}[t]{0.5\linewidth}
+	\begin{minipage}[t]{\columnwidth}
 		\includegraphics[width=\textwidth]{images/misses.eps}
 		\caption{Number of Cache Misses \label{fig:cachel1}}
 	\end{minipage}
@@ -243,51 +292,85 @@ Before the results were out, it was expected a decrease of cache accesses from v
 
 \begin{figure}[!htp]
 	\centering
-	\begin{minipage}[t]{0.5\linewidth}
+	\begin{minipage}[t]{\columnwidth}
 		\includegraphics[width=\textwidth]{images/totals.eps}
 		\caption{Number of Memory Accesses \label{fig:cachel1}}
 	\end{minipage}
 \end{figure}
 
-As we can see, the number of access to cache drops significantly from the first version to the second version while running with the L1 Cache Test. Though in the second test, the L2 Cache, the number of accesses slightly increased.
+As we can see, the number of access to cache drops significantly from the first version to the second version while running with the L1 Cache Test. Though in the second test, the L2 Cache, the number of accesses slightly increased.\\
+
+For more palpable values, the following table shows the execution times.
+
+\begin{table}[!htp]
+	\center{
+	\begin{tabular}{lrlrlrl}
+		\hline
+		\textbf{Test} & \textbf{Time ($\mu$s)} \\
+		\hline
+		L1\_0  &  271.091 \\
+		L1\_1  &  254.000 \\
+		L2\_0  &  6983.450 \\
+		L2\_1  &  6629.000 \\
+		L3\_0  &  521429.0 \\
+		L3\_1  &	260535.0 \\
+		RAM\_0 &  6.60003e+06 \\
+		RAM\_1 &	3 1.08117e+06 \\
+		\hline
+	\end{tabular}
+	\caption{Execution Times}
+	\label{tab:execTimes}
+	}
+\end{table}
+
+As it can be seen, the best improvements are seen in cache level 3 and in the main memory.
 
 
-\begin{thebibliography}{9}
+\begin{thebibliography}{99}
 \bibitem{roofline}
 	\texttt{\small
 	Roofline: An insightful Visual Performance Model for Floating-Point Programs and Multicore Architectures}	\\
 	\emph{Samuel Webb Williams, Andre Waterman, David A. Patterson}	\\
 	23th November 2012
 
+\bibitem{papi}
+	\texttt{\small
+	Experiences and Lessons Learned with a Portable Interface to Hardware Performance Counters}	\\
+	\emph{Jack Dongarra, Kevin London, Shirley Moore, Philip Mucci, Daniel Terpstra, Haihang You, Min Zhou}	\\	
+
+
+\bibitem{caqa}
+	\texttt{\small
+	Computer Architecture: A Quantitative Aproach, 5th Ed.}	\\
+	\emph{John L. Hennesy, David A. Patterson}	\\	
+
+
 \bibitem{ark}
 	\texttt{\small
-	http://ark.intel.com/products/35563/Intel-Core2-Duo-Processor-T9600-6M-Cache-2\_80-GHz-1066-MHz-FSB}	\\
-	\emph{Intel{\textregistered} Core {\texttrademark} 2 Duo Processor T9600 (6M Cache, 2.80 GHz, 1066 MHz FSB)}	\\
-	{\copyright}Intel Corporation	\\
-	23th November 2012
-
-\bibitem{ark2}
-	\texttt{\small
-	http://ark.intel.com/products/43122/Intel-Core-i7-720QM-Processor-6M-Cache-1\_60-GHz}	\\
-	\emph{Intel{\textregistered} Core {\texttrademark} i7-720QM Processor(6M Cache, 1.60 GHz)}	\\
-	{\copyright}Intel Corporation	\\
-	23th November 2012
+	http://ark.intel.com/}
 
 \bibitem{crucial}
 	\texttt{\small
-	http://www.crucial.com/store/ListParts.aspx?model=MacBook\%20Pro\%20\%28Early\%202008\%20and\%20Late\%202008\%29}	\\
-	\emph{Computer memory upgrades for Apple MacBook Pro (Early 2008 and Late 2008) Laptop/Notebook from Crucial.com }	\\
-	{\copyright} Micron Technology	\\
-	24th November 2012
+	http://www.crucial.com}
 
-\bibitem{crucial2}
+\bibitem{wiki}
 	\texttt{\small
-	http://www.crucial.com/store/listparts.aspx?model=Pavilion\%20dv6-2190ep\&Cat=RAM}	\\
-	\emph{Computer memory upgrades for HP - Compaq Pavilion dv6-2190ep Laptop/Notebook from Crucial.com}	\\
-	{\copyright} Micron Technology	\\
-	24th November 2012	
+	httt://www.wikipedia.com}
+
+
+
 
 \end{thebibliography}
+
+\appendix
+\appendixpage
+\section{CUDA Implementation}
+Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 
 \end{document}
 
